# logibridge

./: .gitignore  README.md  docker-compose.yml  vercel.json
data-pipeline/: .dockerignore  .vercelignore  Dockerfile  api.py  api_server.py  auth.py  fetch_hscodes.py  fetch_risk_events.py  generate_sample_shipments.py  pyproject.toml  requirements.txt  tracking_models.py  vercel.json
data-pipeline/api/: index.py
data-pipeline/backend/: auth.py  fetch_compliance_rules.py  fetch_ports.py  freight_estimator.py  package-lock.json  package.json  render.yaml  server.py
data-pipeline/backend/output/: hs_codes.json  ports.json  sample_shipments.json
data-pipeline/output/: risk_events.json
logibridge-web/: .env.production  index.html  netlify.toml  package-lock.json  package.json  vercel.json  vite.config.ts
logibridge-web/api/: auth.js  auth.py  index.py  pyproject.toml  tracking_models.py
logibridge-web/api/output/: risk_events.json
logibridge-web/public/data/: compliance_rules.json  ports.json
logibridge-web/src/: App.tsx  main.tsx  vite-env.d.ts
logibridge-web/src/api/: authApi.ts  client.ts  complianceApi.ts  consultationApi.ts  controlTowerApi.ts  planApi.ts  userApi.ts
logibridge-web/src/components/: ErrorBoundary.tsx
logibridge-web/src/pages/: AdminConsultationsPage.tsx  CompliancePage.tsx  ConsultationPage.tsx  ControlTowerPage.tsx  LoginPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  RegisterPage.tsx  ShipmentsPage.tsx  SmartPlanPage.tsx
logibridge-web/src/store/: useAuthStore.ts  (+6 more)
nginx/: Dockerfile  nginx.conf
scripts/: deploy.sh
(+12 files in other folders)
