[project]
name = "logibridge-api"
version = "1.0.0"
description = "LogiBridge backend API - FastAPI application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "pydantic>=2.13.0",
    "reportlab>=4.3.0",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
    "python-dateutil>=2.9.0",
    "requests>=2.34.0",
    "lxml>=6.1.0",
    "bcrypt>=4.0.0",
    "libsql-client>=0.3.0",
]

[tool.vercel]
entrypoint = "api_server:app"
